--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.84.0",
+    "canvas": "^3.2.0",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "supabase": "^2.58.5",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
