--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
+    "axios": "^1.13.2",
+    "form-data": "^4.0.5",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "openai": "^6.9.1",
